✅ Superuser created: The postgres user from our configuration was created successfully ✅ Full privileges: The user has superuser, create roles, and create database privileges ✅ No password required: Uses trust authentication (secure for SSH environments) ✅ Can login: Ready to accept connections ✅ System roles present: All standard PostgreSQL roles are in place

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,12 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
+# PostgreSQL password files (security sensitive)
+.pgpass
+*.pgpass
+pgpass
+*pgpass*
+
 # Cursor
 #  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
